<resources>
    <string name="app_name">CheckClean</string>
    <string name="connection_button_text">Connexion</string>
    <string name="login_textView_hint">Login</string>
    <string name="password_textView_hint">Mot de passe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="building_choice_button_text">Choisir</string>
    <string name="sign_up_button_text">Inscription</string>
    <string name="last_name_hint_text">Nom</string>
    <string name="first_name_hint_text">Prénom</string>
    <string name="email_hint_text">Email</string>
    <string name="mobile_hint_text">N° mobile</string>
    <string name="password_hint_text">Mot de passe</string>
    <string name="confirmPassword_hint_text">Confirmer mot de passe</string>
    <string name="validate_button_text">Confirmer</string>
    <string name="regex_email_text">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="title_activity_bottom_bar">BottomBarActivity</string>
    <string name="email_already_exist_toast">Cette adresse email existe déjà !</string>
    <string name="bottom_navigation_home_text">Accueil</string>
    <string name="bottom_navigation_control_text">Contrôle</string>
    <string name="bottom_navigation_report_text">Rapport</string>
    <string name="bottom_navigation_team_text">Equipe</string>
    <string name="bottom_navigation_todo_text">Notes</string>
    <string name="createBuilding_name_hint">Nom du bâtiment</string>
    <string name="createBuilding_address_hint">Adresse</string>
    <string name="createBuilding_button_text">Valider</string>
    <string name="title_creationBuilding">Création d\'un chantier</string>
    <string name="kitchenette_category_key">Kitchenette</string>
    <string name="meeting_room_category_key">meeting_room</string>
    <string name="office_category_key">office</string>
    <string name="open_space_category_key">open_space</string>
    <string name="relaxation_area_category_key">relaxation_area</string>
    <string name="restaurant_category_key">restaurant</string>
    <string name="wc_category_key">wc</string>
    <string name="kitchenette_category_title">Kitchenette</string>
    <string name="meeting_room_category_title">Salle de réunion</string>
    <string name="office_category_title">Bureau</string>
    <string name="open_space_category_title">Espace libre</string>
    <string name="relaxation_area_category_title">Zone détente</string>
    <string name="restaurant_category_title">Restaurant</string>
    <string name="wc_category_title">W.C.</string>
    <string name="shower_category_key">shower</string>
    <string name="parkin_category_key">parking</string>
    <string name="shower_category_title">Douche</string>
    <string name="parking_category_title">Parking</string>
    <string name="report_place_textView">Salle</string>
    <string name="report_comment_textView">Commentaire</string>
    <string name="take_picture_button">Prendre une photo</string>
    <string name="report_generate_button">Générer PDF</string>
    <string name="report_place_hint">Nom salle, n°,...</string>
    <string name="report_comment_hint">Problème, remarque, ...</string>
</resources>
